src/objects/Serverside_State__c.object
<CustomObject>
    <description>This object will be used to store text representations of data on a per-user basis.

This object was first created for use with the Order Prioritization project.</description>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Chunk_10__c</fullName>
        <label>State Chunk 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_Chunk_1__c</fullName>
        <label>State Chunk 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_Chunk_2__c</fullName>
        <label>State Chunk 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_Token__c</fullName>
        <description>Piece of text to differentiate the Serverside States stored by functionality or application they correspond to.</description>
        <externalId>true</externalId>
        <label>State Token</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Serverside State</label>
    <nameField>
        <displayFormat>SST-{0000}</displayFormat>
        <label>Serverside State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Serverside States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>